--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -1,39 +1,45 @@
-Professor Alex's Internet Page
-
-First, the basics.
-
-Alex Heading 1
-
-Headings set your default page size
-
-Add your four mochi images from your tutorial here. 
-
-Lists
-
-Let's make an unordered list.
-
-Add an unordered list element
-nest each item inside the unordered list in a list tag
-List elements can be in any order
-
-And now, one in order.
-
-Add an ordered list element.
-Add your top five music albums in order to the list.
-Check it out, numbers by default.
-
-Inline elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-
-Add a hard line under here.
-
-This page probably doesn't look great - we'll learn how to hook it to CSS next week.
+<html>
+  <head>
+    <title>Naaja Jacob</title>
+  </head>
+  <body>
+    <h1>Naaja's Internet Page</h1>
+    <p>First, the basics.</p>
+    <h2>The Basics</h2>
+    <p>Headings set your default page size</p>
+      <img src='images/mochi.jpg' width = '75'/>
+      <img src='images/mochi.gif' />
+      <img src='images/mochi.png' width = '50'/>
+      <img src='images/mochi.svg' />
+    <p> Add your four mochi images from your tutorial here.</p> 
+    <h2>Lists</h2>
+    <p>Let's make an unordered list. (Ex: Grocery List)</p>
+    <ul>
+      <li>Bread</li>
+      <li>Milk</li>
+      <li>Eggs</li>
+    </ul>
+    <p>And now, one in order.</p>
+    <ol>
+      <li>Breakfast</li>
+      <li>Lunch</li>
+      <li>Dinner</li>
+    </ol>
+    <h2>
+      Inline Elements
+    </h2>
+    <p>Sometimes you want to <em>draw attention</em> to something in a line of text.</p>
+     <p>Sometimes you want to <strong>strongly emphasize</strong> something in the text.</p>
+     <p><em><strong>Sometimes you want to do both.</strong></em></p>
+     <h2>Empty Elements</h2>
+     <p>
+       Soft line breaks can't wrap anything.<br/>
+        Neither can image tags, or hard lines.
+     </p> 
+     <p>
+       Add a hard line under here.
+     </p>
+    <hr/>
+      This page probably doesn't look great - we'll learn how to hook it to CSS next week.
+  </body>
+</html>
