--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -3,8 +3,9 @@
     <title>Naaja Jacob</title>
   </head>
   <body>
-    <h1>Naaja's Internet Page</h1>
+    <h1>Naaja's Lab 1</h1>
     <p>First, the basics.</p>
+
     <h2>The Basics</h2>
     <p>Headings set your default page size</p>
       <img src='images/mochi.jpg' width = '75'/>
@@ -12,6 +13,7 @@
       <img src='images/mochi.png' width = '50'/>
       <img src='images/mochi.svg' />
     <p> Add your four mochi images from your tutorial here.</p> 
+
     <h2>Lists</h2>
     <p>Let's make an unordered list. (Ex: Grocery List)</p>
     <ul>
@@ -25,20 +27,15 @@
       <li>Lunch</li>
       <li>Dinner</li>
     </ol>
-    <h2>
-      Inline Elements
-    </h2>
+
+    <h2>Inline Elements</h2>
     <p>Sometimes you want to <em>draw attention</em> to something in a line of text.</p>
-     <p>Sometimes you want to <strong>strongly emphasize</strong> something in the text.</p>
-     <p><em><strong>Sometimes you want to do both.</strong></em></p>
-     <h2>Empty Elements</h2>
-     <p>
-       Soft line breaks can't wrap anything.<br/>
-        Neither can image tags, or hard lines.
-     </p> 
-     <p>
-       Add a hard line under here.
-     </p>
+    <p>Sometimes you want to <strong>strongly emphasize</strong> something in the text.</p>
+    <p><em><strong>Sometimes you want to do both.</strong></em></p>
+
+    <h2>Empty Elements</h2>
+    <p>Soft line breaks can't wrap anything.<br/>Neither can image tags, or hard lines.</p>
+    <p>Add a hard line under here.</p>
     <hr/>
       This page probably doesn't look great - we'll learn how to hook it to CSS next week.
   </body>
