--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -35,10 +35,10 @@
           </div>
           <h2>Favourite photos</h2>
 
-          <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
-          <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
-          <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
-          <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+          <a href="rose1.jpeg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMqMcHwZIvbOPb2QMhNyRCslkL7zDhyomI1w&usqp=CAU" alt="Light pink and royal blue ombre rose"></a>
+          <a href="rose2.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_uhs04iDvJhJRl4zrUWIg2RIBcqP4ykiCZQ&usqp=CAU" alt="Peach and pink ombre rose"></a>
+          <a href="rose3.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Ut5UNV5jxQwzaQXrs0p8tbxlQCGOy9kd6g&usqp=CAU" alt="Royal blue rose"></a>
+          <a href="rose4.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQS6lpzfDUEq6GXHsIABWL4x1j_CAaWMrAPw&usqp=CAU" alt="Pink and white ombre rose"></a>
 
         </div>
       </div>
