--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -23,24 +23,23 @@
               <li><a href="#">Gear</a></li>
               <li><a href="#">Forum</a></li>
             </ul>
-          <nav>
+          </nav>
       </div>
       
-      <div class="article">
-        <div class="aside">
-          <div class="section">
+      <div class="main">
+          <div class="article">
             <h2>Welcome</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin congue erat ac libero malesuada volutpat. Donec porttitor porttitor scelerisque. Etiam faucibus libero quis pretium porttitor. Curabitur quis bibendum sem. Sed ac mattis ligula. Pellentesque nisl enim, mollis eget nunc ut, vestibulum accumsan justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque in elementum neque. Ut tincidunt augue vitae sodales ullamcorper. Vivamus egestas augue at pretium porta. Ut pharetra lacus vel enim consequat, in rhoncus ante luctus. Nam eget nunc bibendum, semper justo vel, ultrices tellus. Aliquam nec sem mauris. In in nisi leo. Proin vehicula dictum justo in luctus. </p>
             <p>Fusce tristique aliquam luctus. Ut venenatis nulla eu purus ullamcorper, id dignissim sem aliquet. Duis hendrerit urna quis lorem pretium, at molestie est tincidunt. In hac habitasse platea dictumst. Donec elementum luctus tempor. Pellentesque sed sem eu elit rutrum vulputate sed sit amet enim. Mauris eu odio vel turpis gravida sodales ut fringilla massa. In mollis, diam sit amet mattis vehicula, lorem ex condimentum nisl, sit amet aliquam leo leo vel turpis. Aliquam id turpis ullamcorper, aliquet ligula sit amet, feugiat lacus. Mauris consequat mauris sit amet ipsum rutrum, sed ultricies nibh maximus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent pulvinar odio at pulvinar ornare. Pellentesque maximus gravida erat nec finibus. Nam scelerisque dapibus dui, ac pharetra lacus viverra sed. Nulla facilisi. Etiam pretium nisl eget turpis lacinia, at posuere lacus scelerisque.</p>
           </div>
-          <h2>Favourite photos</h2>
-
-          <a href="rose1.jpeg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMqMcHwZIvbOPb2QMhNyRCslkL7zDhyomI1w&usqp=CAU" alt="Light pink and royal blue ombre rose"></a>
-          <a href="rose2.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_uhs04iDvJhJRl4zrUWIg2RIBcqP4ykiCZQ&usqp=CAU" alt="Peach and pink ombre rose"></a>
-          <a href="rose3.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Ut5UNV5jxQwzaQXrs0p8tbxlQCGOy9kd6g&usqp=CAU" alt="Royal blue rose"></a>
-          <a href="rose4.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQS6lpzfDUEq6GXHsIABWL4x1j_CAaWMrAPw&usqp=CAU" alt="Pink and white ombre rose"></a>
-
-        </div>
+          <div class="aside">
+            <h2>Favourite photos</h2>
+  
+            <a href="rose1.jpeg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMqMcHwZIvbOPb2QMhNyRCslkL7zDhyomI1w&usqp=CAU" alt="Light pink and royal blue ombre rose"></a>
+            <a href="rose2.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_uhs04iDvJhJRl4zrUWIg2RIBcqP4ykiCZQ&usqp=CAU" alt="Peach and pink ombre rose"></a>
+            <a href="rose3.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_Ut5UNV5jxQwzaQXrs0p8tbxlQCGOy9kd6g&usqp=CAU" alt="Royal blue rose"></a>
+            <a href="rose4.jpg"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQS6lpzfDUEq6GXHsIABWL4x1j_CAaWMrAPw&usqp=CAU" alt="Pink and white ombre rose"></a>
+          </div>
       </div>
 
       <div class="footer">
