--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -2,3 +2,26 @@
 <!-- Include your stylesheet in the head -->
 <!-- Include your script.js right before the </body> tag -->
 <!-- Make a carousel of four mochi images that cycle, based on the readings from javascript.info -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Naaja Jacob</title>
+    <link href="style.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <script> src="script.js" </script>
+
+    <img src= "images/onigiri_1.png" alt="onigiri with spots"/>
+    <img src= "images/onigiri_2.png" alt= "onigiri with mouth closed "/>
+    <img src= "images/onigiri_3.png" alt= "onigiri with eyes closed"/>
+    <img src= "images/onigiri_4.png" alt= "onigiri with a smile"/>
+    <img src= "images/roll_1.png" alt= "yellow and white roll"/>
+    <img src= "images/roll_2.png" alt= "multi-colored roll"/>
+    <img src= "images/roll_3.png" alt= "red roll"/>
+    
+  </body>
+</html>
+
