--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -12,16 +12,23 @@
   </head>
 
   <body>
-    <script> src="script.js" </script>
 
-    <img src= "images/onigiri_1.png" alt="onigiri with spots"/>
-    <img src= "images/onigiri_2.png" alt= "onigiri with mouth closed "/>
-    <img src= "images/onigiri_3.png" alt= "onigiri with eyes closed"/>
-    <img src= "images/onigiri_4.png" alt= "onigiri with a smile"/>
-    <img src= "images/roll_1.png" alt= "yellow and white roll"/>
-    <img src= "images/roll_2.png" alt= "multi-colored roll"/>
-    <img src= "images/roll_3.png" alt= "red roll"/>
-    
+    <button class= "arrow">⇦</button>
+    <button class= "arrow">⇨</button>
+
+    <div>
+        <ul>
+            <li><img src= "images/onigiri_1.png" alt="onigiri with spots"/></li>
+            <li><img src= "images/onigiri_2.png" alt= "onigiri with mouth closed "/></li>
+            <li><img src= "images/onigiri_3.png" alt= "onigiri with eyes closed"/></li>
+            <li><img src= "images/onigiri_4.png" alt= "onigiri with a smile"/></li>
+            <li><img src= "images/roll_1.png" alt= "yellow and white roll"/></li>
+            <li><img src= "images/roll_2.png" alt= "multi-colored roll"/></li>
+            <li><img src= "images/roll_3.png" alt= "red roll"/></li>  
+        </ul>
+    </div>
+   
+    <script> src="script.js" </script>  
   </body>
 </html>
 
