--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -8,10 +8,10 @@
 
     <h2>The Basics</h2>
     <p>Headings set your default page size</p>
-      <img src='images/mochi.jpg' width = '75'/>
-      <img src='images/mochi.gif' />
-      <img src='images/mochi.png' width = '50'/>
-      <img src='images/mochi.svg' />
+      <img src='images/mochi.jpg' width = '75'alt= "mochi jpg" />
+      <img src='images/mochi.gif' alt= "mochi gif"/>
+      <img src='images/mochi.png' width = '50'alt= "mochi png"/>
+      <img src='images/mochi.svg' alt= "mochi svg"/>
     <p> Add your four mochi images from your tutorial here.</p> 
 
     <h2>Lists</h2>
