--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -8,27 +8,27 @@
   <head>
     <meta charset="utf-8">
     <title>Naaja Jacob</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
   </head>
 
   <body>
 
-    <button class= "arrow">⇦</button>
-    <button class= "arrow">⇨</button>
-
-    <div>
+    <div class = "carousel"> 
+      <div class = "gallery"> 
+        <button class= "arrow left">⇦</button>
         <ul>
-            <li><img src= "images/onigiri_1.png" alt="onigiri with spots"/></li>
-            <li><img src= "images/onigiri_2.png" alt= "onigiri with mouth closed "/></li>
-            <li><img src= "images/onigiri_3.png" alt= "onigiri with eyes closed"/></li>
-            <li><img src= "images/onigiri_4.png" alt= "onigiri with a smile"/></li>
-            <li><img src= "images/roll_1.png" alt= "yellow and white roll"/></li>
-            <li><img src= "images/roll_2.png" alt= "multi-colored roll"/></li>
-            <li><img src= "images/roll_3.png" alt= "red roll"/></li>  
+            <li><img id = pic1 src= "images/onigiri_1.png" alt="onigiri with spots"/></li>
+            <li><img id = pic2 src= "images/onigiri_2.png" alt= "onigiri with mouth closed "/></li>
+            <li><img id = pic3 src= "images/onigiri_3.png" alt= "onigiri with eyes closed"/></li>
+            <li><img id = pic4 src= "images/onigiri_4.png" alt= "onigiri with a smile"/></li>
+            <li><img id = pic5 src= "images/roll_1.png" alt= "yellow and white roll"/></li>
+            <li><img id = pic6 src= "images/roll_2.png" alt= "multi-colored roll"/></li>
+            <li><img id = pic7 src= "images/roll_3.png" alt= "red roll"/></li>   
         </ul>
+        <button class= "arrow right">⇨</button>
+      </div>
     </div>
-   
-    <script> src="script.js" </script>  
+    <script> src="script.js"</script>  
   </body>
 </html>
 
