--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -15,7 +15,7 @@
 
     <div class = "carousel"> 
       <div class = "gallery"> 
-        <button class= "arrow left">⇦</button>
+        <button class= "arrow" id="left">⇦</button>
         <ul>
             <li><img id = pic1 src= "images/onigiri_1.png" alt="onigiri with spots"/></li>
             <li><img id = pic2 src= "images/onigiri_2.png" alt= "onigiri with mouth closed "/></li>
@@ -25,10 +25,10 @@
             <li><img id = pic6 src= "images/roll_2.png" alt= "multi-colored roll"/></li>
             <li><img id = pic7 src= "images/roll_3.png" alt= "red roll"/></li>   
         </ul>
-        <button class= "arrow right">⇨</button>
+        <button class= "arrow" id= "right">⇨</button>
       </div>
     </div>
-    <script> src="script.js"</script>  
+    <script src="script.js"> </script>  
   </body>
 </html>
 
