--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class = "container">
-            <form>
+            <form action ="/api" method = "POST">
                 <ul class="flex-outer">
                   <li>
                     <label for="first-name">First Name</label>
