--- a/public/flappy/index.html
+++ b/public/flappy/index.html
@@ -5,17 +5,19 @@
         <title>Naaja Jacob</title>
         <link rel="stylesheet" href="style.css">
     </head>
+  <body>
 
-    <body>
-    <div class="border-left">
-    <div class="game-container">
-        <div class="border-top"></div>
-        <div class="sky">
-            <div class="bird"></div>
-        </div>
-        <div class="ground"></div>
-    </div>
-    <div class="border-right"></div>
-    <script src="script.js" charset="utf-8"></script>
-    </body>
+  <div class="border-left"></div>
+  <div class="game-container">
+      <div class="border-top"></div>
+      <div class="sky">
+          <div class="bird"></div>
+      </div>
+  </div>
+  <div class="ground-container">
+    <div class="ground-moving"></div>
+  </div>
+  <div class="border-right"></div>
+  <script src="script.js" charset="utf-8"></script>
+  </body>
 </html>
