--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -11,56 +11,56 @@
             <form action ="/api" method = "POST">
                 <ul class="flex-outer">
                   <li>
-                    <label for="first-name">First Name</label>
-                    <input type="text" id="first-name" placeholder="Enter your first name here">
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name = "fname" placeholder="Enter your first name here">
                   </li>
                   <li>
-                    <label for="last-name">Last Name</label>
-                    <input type="text" id="last-name" placeholder="Enter your last name here">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name = "lname" placeholder="Enter your last name here">
                   </li>
                   <li>
                     <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Enter your email here">
+                    <input type="email" id="email" name = "email" placeholder="Enter your email here">
                   </li>
                   <li>
                     <label for="phone">Phone</label>
-                    <input type="tel" id="phone" placeholder="Enter your phone here">
+                    <input type="tel" id="phone" name = "phone" placeholder="Enter your phone here">
                   </li>
                   <li>
                     <label for="message">Message</label>
-                    <textarea rows="6" id="message" placeholder="Enter your message here"></textarea>
+                    <textarea rows="5" cols = "33" id="message" name = "message" placeholder="Enter your message here"></textarea>
                   </li>
                   <li>
                     <p>Age</p>
                     <ul class="flex-inner">
                         <li>
-                            <input type="checkbox" id="twenty-to-twentynine">
+                            <input type="checkbox" id="twenty-to-twentynine" name = "age" >
                             <label for="twenty-to-twentynine">20-29</label>
                         </li>
                         <li>
-                            <input type="checkbox" id="thirty-to-thirtynine">
+                            <input type="checkbox" id="thirty-to-thirtynine" name = "age">
                             <label for="thirty-to-thirtynine">30-39</label>
                         </li>
                         <li>
-                            <input type="checkbox" id="forty-to-fortynine">
+                            <input type="checkbox" id="forty-to-fortynine" name = "age">
                             <label for="forty-to-fortynine">40-49</label>
                         </li>
                         <li>
-                            <input type="checkbox" id="fifty-to-fiftynine">
+                            <input type="checkbox" id="fifty-to-fiftynine" name = "age">
                             <label for="fifty-to-fiftynine">50-59</label>
                         </li>
                         <li>
-                            <input type="checkbox" id="sixty-to-sixtynine">
+                            <input type="checkbox" id="sixty-to-sixtynine" name = "age">
                             <label for="sixty-to-sixtynine">60-69</label>
                         </li>
                         <li>
-                            <input type="checkbox" id="other">
+                            <input type="checkbox" id="other" name = "age">
                             <label for="other">Other</label>
                         </li>
                     </ul>
                   </li>
                   <li>
-                    <button type="submit">Submit</button>
+                    <button type="submit" name = "submit">Submit</button>
                   </li>
                 </ul>
               </form>
