--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
                     <li><a href="labs/lab_8">Lab 8</a></li>
                     <li><a href="labs/lab_9">Lab 9</a></li>
                     <li><a href="labs/lab_10">Lab 10</a></li>
-                    <li><a href="asst-1">Assignment 1</a></li>
-                    <li><a href="asst-2">Assignment 2</a></li>
+                    <li><a href="flappy">Flappy Bird</a></li>
+                    <li><a href="doodle">Doodle</a></li>
                 </ol>
                 <h2>Assignments List</h2>
                 <ol>
